# Elixir-integrations-test

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements.txt  solution.README.md
core/: admin.py  biz_rule.py  models.py  tests.py  types.py  urls.py  views.py
core/clients/: base_client.py  marvel_client.py  pokemon_client.py  scryfall_client.py
core/management/commands/: bizrule.py  hearthstone.py  marvel.py  mtg.py  pokemon.py
core/migrations/: 0001_initial.py  0002_alter_textform_value.py  0003_alter_characterform_value_alter_textform_value.py  0004_alter_textform_value.py  0005_alter_booleanform_value_alter_characterform_value_and_more.py  0006_alter_field_form_type.py  0007_alter_field_form_type_alter_field_object.py  0008_rename_object_field_service.py  0009_dateform_alter_field_form_type.py  0010_urlform_alter_field_form_type.py  0011_alter_field_form_type.py
core/templates/core/: object.html  objects.html
core/tests/: test_base_client.py  test_marvel_client.py  test_pokemon_client.py  test_scryfall_client.py  tests.py
core/utils/: get_form_model.py  logger.py
docs/: Makefile
docs/_ext/: djangodocs.py
docs/source/: conf.py  core.management.commands.rst  core.rst  index.rst  integrations.rst  modules.rst
etc/mysql/config/: extra-config.cnf
integrations/: asgi.py  settings.py  urls.py  wsgi.py
